@@ -1,15 +1,21 @@
 [buildout]
 develop = .
-parts = test
-versions = versions
-
-# with zodb 3.9, DemoStorage currently fails with _tid attribute, so
-# nail ZODB version to 3.8.1 for tests.
-[versions]
-ZODB3 = 3.8.1
+parts = test coverage-test coverage-report
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.blobfile [test]
 zcml = z3c.blobfile-overrides
 defaults = ['--tests-pattern', '^f?tests$', '-v']
+
+[coverage-test]
+recipe = zc.recipe.testrunner
+eggs = z3c.blobfile [test]
+zcml = z3c.blobfile-overrides
+defaults = ['--tests-pattern', '^f?tests$', '-v', '--coverage', '../../coverage']
+
+[coverage-report]
+recipe = zc.recipe.egg
+eggs = z3c.coverage
+scripts = coverage=coverage-report
+arguments = ('coverage', 'coverage/report')
